--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,7 +7,7 @@
     {% endif %}
   </head>
   <body>
-    <div>Subtle: <a href="/index">Home</a></div>
+    <div>Subtle: <a href="/">Home</a>   <a href="/results">Results</a></div>
     <hr>
     {% block content %}{% endblock %}
   </body>
