--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -3,7 +3,7 @@
     {% for lang in results %}
       <h1>{{ results[lang][0]['language'] }} results for '{{ video.title }}':</h1>
       {% for sub in results[lang] %}
-      <div><p><b>{{ sub.file_name }}</b>
+      <div><p><b><a href="/download/{{lang}}/{{sub.download_id}}">{{ sub.file_name }}</a></b>
         <br>Number of downloads: {{ sub.download_count }}
         <br>Rating: {{ sub.rating }}
         <br>FPS: {{ sub.fps }}
