--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -1,13 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
+    <div align="right">
+        <b>Sort by:</b>
+        <a href="/results?sort_by=file_name&desc={{is_desc}}">A-Z</a>
+        <a href="/results?sort_by=download_count&desc={{is_desc}}">Numbers of downloads</a>
+        <a href="/results?sort_by=rating&desc={{is_desc}}">Rating</a> ||
+        <a href="/results?sort_by={{sort_by}}&desc={{not is_desc}}">{{order}}</a>
+    </div>
+
     {% for lang in results %}
-      <h1>{{ results[lang][0]['language'] }} results for '{{ video.title }}':</h1>
-      {% for sub in results[lang] %}
-      <div><p><b><a href="/download/{{lang}}/{{sub.download_id}}">{{ sub.file_name }}</a></b>
-        <br>Number of downloads: {{ sub.download_count }}
-        <br>Rating: {{ sub.rating }}
-        <br>FPS: {{ sub.fps }}
-      </p></div>
-      {% endfor %}
+        <h1>{{ results[lang][0]['language'] }} results for '{{ video.title }}':</h1>
+        <table>
+            <tr>
+                <th><p align="left">Name</p></th>
+                <th><p align="left"># Downloads</p></th>
+                <th><p align="left">Rating</p></th>
+                <th><p align="left">FPS</p></th>
+                <th><p align="left">Download</p></th>
+            </tr>
+            {% for sub in results[lang] %}
+            <tr>
+                <td width="70%"><div><p>{{ sub.file_name }}</p></div></td>
+                <td width=150px>{{ sub.download_count }}</td>
+                <td>{{ sub.rating }}</td>
+                <td>{{ sub.fps }}</td>
+                <td><form action="/download/{{lang}}/{{sub.download_id}}" method="post">
+                <button name="download" type="submit">Download</button>
+                </form></td>
+            </tr>
+            {% endfor %}
+        </table>
     {% endfor %}
 {% endblock %}
