Made start on video selection page

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -20,7 +20,7 @@
             {% endwith %}
         {% endblock %}
     </div>
-    <div>Subtle: <a href="/">Home</a>   <a href="/results">Results</a></div>
+    <div>Subtle: <a href="/">Home</a>   <a href="/browse">Select a video</a>   <a href="/results">Results</a></div>
     <hr>
     {% block content %}{% endblock %}
   </body>
