Removed a word in template

--- a/web/templates/browse.html
+++ b/web/templates/browse.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Please select a mkv video file:</h1>
+<h1>Please select a video file:</h1>
         <table>
             <tr>
                 <th><p align="left">Name</p></th>
