--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,13 +1,40 @@
+<!doctype html>
 <html>
   <head>
-    {% if title %}
-    <title>Subtle - {{ title }}</title>
-    {% else %}
-    <title>Subtle</title>
-    {% endif %}
+      {% if title %}
+      <title>Subtle - {{ title }}</title>
+      {% else %}
+      <title>Subtle</title>
+      {% endif %}
+      <!-- Bootstrap -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/static/css/subtle.css" rel="stylesheet">
   </head>
   <body>
-    <div>
+      <!-- NavBar -->
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+          <a class="navbar-brand" href="/">Subtle</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/browse">Select a video</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link{% if no_results %} disabled{% endif %}" href="/results">Results</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+
         {% block popups %}
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -19,9 +46,10 @@
                 {% endif %}
             {% endwith %}
         {% endblock %}
-    </div>
-    <div>Subtle: <a href="/">Home</a>   <a href="/browse">Select a video</a>   <a href="/results">Results</a></div>
-    <hr>
-    {% block content %}{% endblock %}
+      <main role="main" class="container">
+          {% block content %}{% endblock %}
+      </main>
+      <script src="/static/js/jquery.js"></script>
+      <script src="/static/js/bootstrap.bundle.js"></script>
   </body>
 </html>
