--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -35,17 +35,24 @@
           </div>
         </nav>
 
+        <!-- Flash messages -->
         {% block popups %}
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
-                    <ul class=flashes>
-                        {% for message in messages %}
-                            <li>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
+                    <div class="popups">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            {% for message in messages %}
+                                {{ message }}
+                            {% endfor %}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    </div>
                 {% endif %}
-            {% endwith %}
-        {% endblock %}
+          {% endwith %}
+      {% endblock %}
+
       <main role="main" class="container">
           {% block content %}{% endblock %}
       </main>
