Some misc tweaks to try out bootstrap

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<b><center>{{ greeting }}</center></b>
+<div class="index">
+    <h1>{{ greeting }}</h1>
+    <p class="lead">This home page will have important information.<br> For example, the user will be notified here if they still need to set their OS credentials.</p>
+<div>
 {% endblock %}
