Tweaked browse.html table; added jQuery script for clickable rows

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -57,6 +57,7 @@
           {% block content %}{% endblock %}
       </main>
       <script src="/static/js/jquery.js"></script>
+      <script src="/static/js/subtle.js"></script>
       <script src="/static/js/bootstrap.bundle.js"></script>
   </body>
 </html>
