--- a/web/templates/browse.html
+++ b/web/templates/browse.html
@@ -1,28 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Please select a video file:</h1>
-        <table>
+<h2>Please select a video file</h2>
+    <div class="table">
+        <table class="table table-sm table-hover">
+            <thead>
             <tr>
-                <th><p align="left">Name</p></th>
-                <th><p align="left">Type</p></th>
+                <th style="width: 80%">Name</th>
+                <th style="width: 20%">Type</th>
             </tr>
+            </thead>
+            <tbody>
             {% if not_root %}
-            <tr>
-                <td width="70%" height="5"><small><a href="/browse?dir=parent">..</a></small></td>
-                <td><small>Parent directory</small></td>
+            <tr class='clickable-row' data-url='/browse?dir=parent'>
+                <td>..</td>
+                <td>Parent directory</small></td>
             </tr>
             {% endif %}
             {% for dir in directories %}
-            <tr>
-                <td width="70%" height="5"><small><a href="/browse?dir={{ dir }}">{{ dir }}</a></small></td>
-                <td><small>Directory</small></td>
+            <tr class='clickable-row' data-url='/browse?dir={{ dir }}'>
+                <td>{{ dir }}</td>
+                <td>Directory</td>
             </tr>
             {% endfor %}
             {% for file in files %}
-            <tr>
-                <td width="70%" height="5"><small><a href="/select?file={{ file }}">{{ file }}</a></small></td>
-                <td><small>Video file</small></td>
+            <tr class='clickable-row' data-url='/select?file={{ file }}'>
+                <td>{{ file }}</td>
+                <td>Video file</td>
             </tr>
             {% endfor %}
+            </tbody>
         </table>
+    </div>
 {% endblock %}
