Added logo and red navbar

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -13,12 +13,10 @@
   </head>
   <body>
       <!-- NavBar -->
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="/">Subtle</a>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
@@ -28,10 +26,7 @@
                 <a class="nav-link{% if no_results %} disabled{% endif %}" href="/results">Results</a>
               </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <a href="/"><img src="/static/img/subtle_w.svg" height="40px" class="img-responsive" alt="Subtle"></a>
           </div>
         </nav>
 
