--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="index">
+    <img src="/static/img/subtle_r.svg" height="200px" class="img-responsive" alt="Subtle">
+    <br><br>
     <h1>{{ greeting }}</h1>
     <p class="lead">This home page will have important information.<br> For example, the user will be notified here if they still need to set their OS credentials.</p>
 <div>
