--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,6 +6,7 @@
       {% else %}
       <title>Subtle</title>
       {% endif %}
+      <link rel="shortcut icon" href="/static/img/favicon.ico">
       <!-- Bootstrap -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="/static/css/bootstrap.min.css" rel="stylesheet">
