Show loading page when video has been selected

--- a/web/static/css/subtle.css
+++ b/web/static/css/subtle.css
@@ -10,6 +10,11 @@ body    {
     text-align: center;
 }
 
+#load_screen {
+  display: none;
+  text-align: center;
+}
+
 /* Custom red navbar */
 .navbar {
   background-color: #b21810;
