Add link to Github profile

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -82,7 +82,12 @@
       </main>
       <footer class="footer">
       <div class="container" align="center">
-        <span class="text-muted">Subtle by <strong>Beeksma</strong></span>
+        <span class="text-muted">
+            Subtle by 
+            <strong>
+                <a href="https://github.com/beeksma" class="text-muted" target="_new">Beeksma</a>
+            </strong>
+        </span>
       </div>
     </footer>
       <script src="/static/js/jquery.js"></script>
