--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -2,10 +2,10 @@
 {% block content %}
     <div align="right">
         <b>Sort by:</b>
-        <a href="/results?sort_by=file_name&desc={{is_desc}}">A-Z</a>
-        <a href="/results?sort_by=download_count&desc={{is_desc}}">Numbers of downloads</a>
-        <a href="/results?sort_by=rating&desc={{is_desc}}">Rating</a> ||
-        <a href="/results?sort_by={{sort_by}}&desc={{not is_desc}}">{{order}}</a>
+        <a href="{{ url_for('get_result') }}?sort_by=file_name&desc={{is_desc}}">A-Z</a>
+        <a href="{{ url_for('get_result') }}?sort_by=download_count&desc={{is_desc}}">Numbers of downloads</a>
+        <a href="{{ url_for('get_result') }}?sort_by=rating&desc={{is_desc}}">Rating</a> ||
+        <a href="{{ url_for('get_result') }}?sort_by={{sort_by}}&desc={{not is_desc}}">{{order}}</a>
     </div>
     <br/>
     {% for lang in results %}
@@ -28,7 +28,7 @@
                         <td>{{ sub.download_count }}</td>
                         <td>{{ sub.rating }}</td>
                         <td>{{ sub.fps }}</td>
-                        <td style="text-align: center;"><form action="/download/{{lang}}/{{sub.download_id}}" method="post">
+                        <td style="text-align: center;"><form action="/subtle/download/{{lang}}/{{sub.download_id}}" method="post">
                         <input type="image" src="/static/img/download.svg" onMouseOver="this.src='/static/img/download_r.svg'"
                             onMouseOut="this.src='/static/img/download.svg'" style="cursor: pointer" width="30" alt="Download" />
                         </form></td>
