Added dynamic URLs for static content

--- a/web/templates/browse.html
+++ b/web/templates/browse.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="load_screen">
     <br><br><br>
-    <p align="center"><img height="100" src="/static/img/subtle_r.svg"/></p>
+    <p align="center"><img height="100" src="{{ url_for('static', filename='img/subtle_r.svg') }}"/></p>
     <h3>Searching for subtitles...</h3>
     <br><br><br>
 </div>
