--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,11 +6,11 @@
       {% else %}
       <title>Subtle</title>
       {% endif %}
-      <link rel="shortcut icon" href="/static/img/favicon.ico">
+      <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
       <!-- Bootstrap -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-      <link href="/static/css/subtle.css" rel="stylesheet">
+      <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+      <link href="{{ url_for('static', filename='css/subtle.css') }}" rel="stylesheet">
   </head>
   <body>
       <!-- NavBar -->
@@ -27,7 +27,7 @@
                 <a class="nav-link{% if no_results %} disabled{% endif %}" href="{{ url_for('get_result') }}">Results</a>
               </li>
             </ul>
-            <a href="{{ url_for('home') }}"><img src="/static/img/subtle_w.svg" height="40px" class="img-responsive" alt="Subtle"></a>
+            <a href="{{ url_for('home') }}"><img src="{{ url_for('static', filename='img/subtle_w.svg') }}" height="40px" class="img-responsive" alt="Subtle"></a>
           </div>
         </nav>
 
@@ -90,8 +90,8 @@
         </span>
       </div>
     </footer>
-      <script src="/static/js/jquery.js"></script>
-      <script src="/static/js/subtle.js"></script>
-      <script src="/static/js/bootstrap.bundle.js"></script>
+      <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/subtle.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script>
   </body>
 </html>
