--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="index">
-    <img src="/static/img/subtle_r.svg" height="200px" class="img-responsive" alt="Subtle">
+    <img src="{{ url_for('static', filename='img/subtle_r.svg') }}" height="200px" class="img-responsive" alt="Subtle">
     <br><br>
     <h1>{{ greeting }}</h1>
     <p class="lead">Select a video to get started.</p>
