Moved footer to index page only; small tweaks to welcome text

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,6 +4,14 @@
     <img src="{{ url_for('static', filename='img/subtle_r.svg') }}" height="200px" class="img-responsive" alt="Subtle">
     <br><br>
     <h1>{{ greeting }}</h1>
-    <p class="lead">Select a video to get started.</p>
-<div>
+    <p class="lead"><a href="{{ url_for('browse') }}"><b>Select a video</b></a> to get started.</p>
+</div>
+<footer class="page-footer font-small blue pt-4 mt-4">
+    <div class="footer-copyright py-3 text-center">
+        Subtle by 
+        <strong>
+            <a href="https://github.com/beeksma" class="text-muted" target="_new">Beeksma</a>
+        </strong>
+    </div>
+</footer>
 {% endblock %}
