--- a/web/templates/browse.html
+++ b/web/templates/browse.html
@@ -16,27 +16,22 @@
     </h2>
     <div class="table">
         <table class="table table-sm table-borderless table-hover">
-            <thead>
-            <tr>
-                <th style="width: 10%" />
-            </tr>
-            </thead>
             <tbody>
             {% if not_root %}
             <tr class='clickable-dir' style="cursor: pointer" data-url='{{ url_for('browse') }}?dir=-1'>
-                <td><img height="50" src="{{ url_for('static', filename='img/directory.svg') }}"/></td>
+                <td style="width: 10%"><img height="50" src="{{ url_for('static', filename='img/directory.svg') }}"/></td>
                 <td>..</td>
             </tr>
             {% endif %}
             {% for dir in directories %}
             <tr class='clickable-dir' style="cursor: pointer" data-url='{{ url_for('browse') }}?dir={{ directories.index(dir) }}'>
-                <td><img height="50" src="{{ url_for('static', filename='img/directory.svg') }}"/></td>
+                <td style="width: 10%"><img height="50" src="{{ url_for('static', filename='img/directory.svg') }}"/></td>
                 <td>{{ dir }}</td>
             </tr>
             {% endfor %}
             {% for file in files %}
             <tr class='clickable-file' style="cursor: pointer" data-url='{{ url_for('select') }}?file={{ files.index(file) }}'>
-                <td><img height="50" src="{{ url_for('static', filename='img/video.svg') }}"/></td>
+                <td style="width: 10%"><img height="50" src="{{ url_for('static', filename='img/video.svg') }}"/></td>
                 <td>{{ file }}</td>
             </tr>
             {% endfor %}
