--- a/web/templates/browse.html
+++ b/web/templates/browse.html
@@ -15,7 +15,7 @@
         {% endif %}
     </h2>
     <div class="table">
-        <table class="table table-sm table-borderless table-hover">
+        <table class="table-responsive table-sm table-borderless table-hover">
             <tbody>
             {% if not_root %}
             <tr class='clickable-dir' style="cursor: pointer" data-url='{{ url_for('browse') }}?dir=-1'>
